version 1.2.1 (not yet released)
=================================
 * num2date uses 'proleptic_gregorian' scheme when basedate is post-Gregorian but date is pre-Gregorian
   (issue #182).
 * Fix for issue #187 (have date2num round to the nearest second when within 1
   microsecond).
 

version 1.2.0 (release tag v1.2.0rel)
=====================================
 * Return the default values of dayofwk and dayofyr when calendar
   is '' (issue #173).
 * fix treatment of masked arrays in num2date and date2num (issue #175).
   Also make sure masked arrays are output from num2date/date2num if
   masked arrays are input.
 * Where possible, use timedelta arithmetic to decode times exactly within
   num2date (issue #171).
 * Make taking the difference between two cftime datetimes to produce a
   timedelta exact to the microsecond; depending on the units encoding,
   this enables date2num to be exact as well (issue #109).
 * utime.date2num/utime.num2date now just call module level functions.
   JulianDayFromDate/DateFromJulianDay no longer used internally (PR #180).


version 1.1.3 (release tag v1.1.3rel)
=====================================
 * add isoformat method for compatibility with python datetime (issue #152).
 * make 'standard' default calendar for cftime.datetime
   so that dayofwk,dayofyr methods don't fail (issue #169).

version 1.1.2 (release tag v1.1.2rel)
=====================================
 * change dayofwk and dayofyr attributes into properties (issue #158)
 * fix for issue #165 (python datetime should be returned when
   only_use_cftime_datetimes=False).

version 1.1.1.2 (release tag v1.1.1.2rel)
=========================================
 * include pyproject.toml in MANIFEST.in so it gets 
   included in source tarball (issue #154).

version 1.1.1.1 (release tag v1.1.1.1rel)
=========================================
 * Fix error installing with pip on python 3.8 by following 
   PEP 517 (issue #148, PR #149)

version 1.1.1 (release tag v1.1.1rel)