@@ -810,6 +810,12 @@ class cftimeTestCase(unittest.TestCase):
             units = 'days since -4713-01-01 12:00'
             dt2 = num2date(date2num(dt1, units), units)
             assert(dt1 == dt2)
+# issue #188 - leap years calculated incorrectly for negative years in proleptic_gregorian calendar
+            dt1 = datetime(2020, 4, 24, 16, 15, 10)
+            units = 'days since -4713-01-01 12:00'
+            cal = 'proleptic_gregorian'
+            dt2 = num2date(date2num(dt1, units, cal), units, cal)
+            assert(dt1 == dt2)
 
 class TestDate2index(unittest.TestCase):
 
