@@ -4,6 +4,8 @@ version 1.2.1 (not yet released)
    (issue #182).
  * Fix for issue #187 (have date2num round to the nearest second when within 1
    microsecond).
+ * Fix for issue #188 (leap years calculated incorrectly for negative years in
+   proleptic_gregorian calendar).
  
 
 version 1.2.0 (release tag v1.2.0rel)
